Настроил часть ассетов и иконок

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
+@font-face {
+	font-family: 'Gilroy';
+	src: local('Gilroy Regular'), url(./fonts/Gilroy/Gilroy-Regular.ttf) format('TrueType');
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: 'Gilroy';
+	src: local('Gilroy SemiBold'), url(./fonts/Gilroy/Gilroy-Semibold.ttf) format('TrueType');
+	font-weight: 600;
+}
+
+@font-face {
+	font-family: 'FactorA';
+	src: local('FactorA Medium'), url(./fonts/FactorA/FactorAMedium-Regular.ttf) format('TrueType');
+	font-weight: 500;
+}
+
+@font-face {
+	font-family: 'FactorA';
+	src: local('FactorA Bold'), url(./fonts/FactorA/FactorA-Bold.ttf) format('TrueType');
+	font-weight: 700;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(360deg);
+	}
 }
